# MyPyAcademia

./: Database.txt  README.md
Projects/BUZZ7/: BUZZ7.py
Projects/BasicQuizGame/: BasicQuizGame.py  README
Projects/CheckFirstLastOfList/: CheckFirstLastOfList.py  README
Projects/CountdownTimer/: CountdownTimer.py
Projects/DivisibleBy5/: README
Projects/EnhancedProjectPassPaulito/: README  RunEnhancedProjectPassPaulito.py  project.py
Projects/EnhancedProjectPassPaulitoGUI/: AddAutoWindow.py  AddManualWindow.py  AppState.py  LoginWindow.py  MenuWindow.py  PasswordManager.spec  Resources.qrc  Resources_rc.py  ShowByIDWindow.py  ShowByWebWindow.py  ShowPassMenuWindow.py  main.py  pyproject.toml  ui_Add_Auto.py  ui_Add_Manual.py  ui_Login.py  ui_Menu.py  ui_Show_Pass_Menu.py  ui_Show_by_ID.py  ui_Show_by_Web.py
Projects/EnhancedProjectPassPaulitoGUI/QtUI/: Add_Auto.ui  Add_Manual.ui  Login.ui  Menu.ui  Show_Pass_Menu.ui  Show_by_ID.ui  Show_by_Web.ui  ToDeletePass.ui  Update_Pass.ui
Projects/EvenCharactersInStr/: EvenCharactersInStr.py  README
Projects/FibonacciNum/: FibonacciNum.py
Projects/GameRecommendation/: GameRecommendation.py  README
Projects/MultiplicationNSum/: MultiplicationNSum.py  README
Projects/MyHeroAdventure/: MyHeroAdventure.py  README
Projects/NewtonSquareRootMethod/: NewtonSquareRootMethod.py
Projects/NumberGuessingGame/: NumberGuessingGame.py  README
Projects/NumberPyramid/: README
Projects/PaulingtonCarDealership/: Database.csv  PaulingtonCarDealership.py  PaulingtonCarListReader.py
Projects/PigDiceGame/: README
(+8 files in other folders)
